kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    environment: dev
    project: iac-full-infra
