kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
  labels:
    app: iac-full-infra
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iac-full-infra
  template:
    metadata:
      labels:
        app: iac-full-infra
        environment: dev
    spec:
      serviceAccountName: app
      containers:
        - name: app
          image: 407772390483.dkr.ecr.ap-southeast-1.amazonaws.com/iac-full-infra-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "256m"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
