kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
  labels:
    app: iac-full-infra
    environment: dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: iac-full-infra
